# cpp-paddle-ocr

./: .gitignore  CMakeLists.txt  OCR_IPC_SERVICE.md  OCR_SERVICE_REFACTORING.md  README.md  THREAD_ARCHITECTURE_ANALYSIS.md  convert_to_mingw_libs.sh  paddle_ocr.cpp  paddle_ocr.h  test_paddle_ocr.cpp  test_worker_recommendation.cpp
include/auto_log/: autolog.h
include/paddle_ocr/: cpu_worker_pool.h  gpu_worker_pool.h  ocr_cls.h  ocr_det.h  ocr_ipc_client.h  ocr_ipc_service.h  ocr_rec.h  ocr_service.h  ocr_worker.h  paddleocr.h  paddlestructure.h  postprocess_op.h  structure_layout.h  structure_table.h
lib/msvc/: README.md
resources/: client_icon.rc  service_icon.rc
scripts/: compile-client-resources.ps1  compile-service-resources.ps1
src/: clipper.cpp  cpu_worker_pool.cpp  demo_main.cpp  gpu_worker_pool.cpp  ocr_client_main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_ipc_client.cpp  ocr_ipc_service.cpp  ocr_rec.cpp  ocr_service.cpp  ocr_service_main.cpp  ocr_worker.cpp  paddleocr.cpp  paddlestructure.cpp  postprocess_op.cpp  preprocess_op.cpp  structure_layout.cpp  structure_table.cpp  utility.cpp
tests/: CLEANUP_SUMMARY.md  DEBUG_GUIDE.md  README.md  build_tests.bat  simple_test.cpp  simple_test.h  test_ocr_worker.cpp
